# AutoFlow

./: .gitignore  CMakeLists.txt
AutoFlowStation/: CMakeLists.txt  GeneralDefine.h  MenuBarConfig.json  main.cpp  mainwindow.cpp  mainwindow.h
AutoFlowStation/AutoFlowStationPage/: T_StartPage.cpp  T_StartPage.h
AutoFlowStation/Resource/Json/: GeneralPluginUIConfig.json
ElaWidgetTools/: CMakeLists.txt  ElaAppBar.cpp  ElaWindow.cpp  ElaWindow.h
ElaWidgetTools/DeveloperComponents/: ElaSuggestDelegate.cpp
ElaWidgetTools/private/: ElaWindowPrivate.h
GeneralUtils/: CmakeLists.txt  GeneralDefine.h  Logger.h  PluginManager.cpp  PluginManager.h  logger.cpp
GeneralWidget/: CMakeLists.txt  GeneralDefine.h  T_Home.cpp  T_Home.h
PluginFramework/: CmakeLists.txt  PluginFramework.cpp  PluginFramework.h
